load("//tools/base/build-system/integration-test:integration-test.bzl", "gradle_integration_test")
load("//tools/base/bazel:maven.bzl", "maven_repo")

gradle_integration_test(
    name = "tests",
    timeout = "long",
    srcs = glob([
        "src/test/java/**/*.java",
        "src/test/java/**/*.kt",
    ]),
    data = [
        "//prebuilts/studio/sdk:build-tools/latest",
        "//prebuilts/studio/sdk:platforms/latest_build_only",
        "//tools/base/build-system:gradle-distrib",
        "//tools/base/build-system/integration-test:test-projects/dynamicApp",
        "//tools/base/build-system/integration-test:test-projects/lintBaseline",
        "//tools/base/build-system/integration-test:test-projects/lintCustomLocalAndPublishRules",
        "//tools/base/build-system/integration-test:test-projects/lintCustomRules",
        "//tools/base/build-system/integration-test:test-projects/lintDeps",
        "//tools/base/build-system/integration-test:test-projects/lintInstantiate",
        "//tools/base/build-system/integration-test:test-projects/lintKotlin",
        "//tools/base/build-system/integration-test:test-projects/lintLibraryModel",
        "//tools/base/build-system/integration-test:test-projects/lintLibrarySkipDeps",
        "//tools/base/build-system/integration-test:test-projects/lintMultipleLintJars",
        "//tools/base/build-system/integration-test:test-projects/lintNoJavaClasses",
        "//tools/base/build-system/integration-test:test-projects/lintResourceResolve",
        "//tools/base/build-system/integration-test:test-projects/lintStandalone",
        "//tools/base/build-system/integration-test:test-projects/lintStandaloneCustomRules",
        "//tools/base/build-system/integration-test:test-projects/lintStandaloneVital",
        "//tools/base/build-system/integration-test:test-projects/lintSuppress",
    ],
    maven_repo_manifests = [
        "//tools/base/build-system:gradle_plugin_no_databinding_repo",
        "//tools/base/build-system/integration-test/lint:prebuilts",
        "//tools/base/build-system/integration-test:support_library_latest",
        "//tools/base/build-system/integration-test:kotlin_gradle_plugin_prebuilts",
    ],
    maven_repos = [],
    resources = glob(["src/test/resources/**"]),
    shard_count = 4,
    deps = [
        "//tools/base/annotations",
        "//tools/base/build-system:gradle-api",
        "//tools/base/build-system/builder",
        "//tools/base/build-system/builder-model",
        "//tools/base/build-system/builder-test-api:tools.builder-test-api",
        "//tools/base/build-system/gradle-api",
        "//tools/base/build-system/gradle-core",
        "//tools/base/build-system/integration-test/framework",
        "//tools/base/common:tools.common",
        "//tools/base/ddmlib:tools.ddmlib",
        "//tools/base/repository:tools.repository",
        "//tools/base/sdk-common:tools.sdk-common",
        "//tools/base/sdklib:tools.sdklib",
        "//tools/base/testutils:tools.testutils",
        "//tools/base/third_party:com.google.guava_guava",
        "//tools/base/third_party:com.google.truth.extensions_truth-java8-extension",
        "//tools/base/third_party:com.google.truth_truth",
        "//tools/base/third_party:commons-io_commons-io",
        "//tools/base/third_party:org.jetbrains.kotlin_kotlin-stdlib",
        "//tools/base/third_party:org.jetbrains.kotlin_kotlin-test",
    ],
)

maven_repo(
    name = "prebuilts",
    # keep sorted
    artifacts = [
        "//prebuilts/tools/common/m2/repository/android/arch/core/common/1.0.0:jar",
        "//prebuilts/tools/common/m2/repository/android/arch/core/common/1.1.0:jar",
        "//prebuilts/tools/common/m2/repository/android/arch/core/runtime/1.1.0:aar",
        "//prebuilts/tools/common/m2/repository/android/arch/lifecycle/common/1.1.0:jar",
        "//prebuilts/tools/common/m2/repository/android/arch/lifecycle/livedata-core/1.1.0:aar",
        "//prebuilts/tools/common/m2/repository/android/arch/lifecycle/livedata/1.1.1:aar",
        "//prebuilts/tools/common/m2/repository/android/arch/lifecycle/runtime/1.1.0:aar",
        "//prebuilts/tools/common/m2/repository/android/arch/lifecycle/viewmodel/1.1.0:aar",
        "//prebuilts/tools/common/m2/repository/android/arch/navigation/navigation-common/1.0.0:aar",
        "//prebuilts/tools/common/m2/repository/android/arch/navigation/navigation-fragment/1.0.0:aar",
        "//prebuilts/tools/common/m2/repository/android/arch/navigation/navigation-runtime/1.0.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/activity/activity/1.0.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/activity/activity/1.2.0-alpha02:aar",
        "//prebuilts/tools/common/m2/repository/androidx/annotation/annotation/1.1.0:jar",
        "//prebuilts/tools/common/m2/repository/androidx/appcompat/appcompat-resources/1.1.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/appcompat/appcompat/1.1.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/arch/core/core-common/2.1.0:jar",
        "//prebuilts/tools/common/m2/repository/androidx/arch/core/core-runtime/2.1.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/autofill/autofill/1.0.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/collection/collection/1.1.0:jar",
        "//prebuilts/tools/common/m2/repository/androidx/compose/animation/animation-core/1.0.0-beta07:aar",
        "//prebuilts/tools/common/m2/repository/androidx/compose/animation/animation/1.0.0-beta07:aar",
        "//prebuilts/tools/common/m2/repository/androidx/compose/compiler/compiler/1.0.0-beta07:jar",
        "//prebuilts/tools/common/m2/repository/androidx/compose/foundation/foundation-layout/1.0.0-beta07:aar",
        "//prebuilts/tools/common/m2/repository/androidx/compose/foundation/foundation/1.0.0-beta07:aar",
        "//prebuilts/tools/common/m2/repository/androidx/compose/material/material-icons-core/1.0.0-beta07:aar",
        "//prebuilts/tools/common/m2/repository/androidx/compose/material/material/1.0.0-beta07:aar",
        "//prebuilts/tools/common/m2/repository/androidx/compose/runtime/runtime-saveable/1.0.0-beta07:aar",
        "//prebuilts/tools/common/m2/repository/androidx/compose/runtime/runtime/1.0.0-beta07:aar",
        "//prebuilts/tools/common/m2/repository/androidx/compose/ui/ui-geometry/1.0.0-beta07:aar",
        "//prebuilts/tools/common/m2/repository/androidx/compose/ui/ui-graphics/1.0.0-beta07:aar",
        "//prebuilts/tools/common/m2/repository/androidx/compose/ui/ui-text/1.0.0-beta07:aar",
        "//prebuilts/tools/common/m2/repository/androidx/compose/ui/ui-tooling/1.0.0-beta07:aar",
        "//prebuilts/tools/common/m2/repository/androidx/compose/ui/ui-unit/1.0.0-beta07:aar",
        "//prebuilts/tools/common/m2/repository/androidx/compose/ui/ui-util/1.0.0-beta07:aar",
        "//prebuilts/tools/common/m2/repository/androidx/compose/ui/ui/1.0.0-beta07:aar",
        "//prebuilts/tools/common/m2/repository/androidx/constraintlayout/constraintlayout-core/1.0.0-alpha1:jar",
        "//prebuilts/tools/common/m2/repository/androidx/core/core-ktx/1.1.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/core/core/1.0.1:aar",
        "//prebuilts/tools/common/m2/repository/androidx/core/core/1.1.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/dynamicanimation/dynamicanimation/1.0.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/fragment/fragment/1.1.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/lifecycle/lifecycle-common/2.1.0:jar",
        "//prebuilts/tools/common/m2/repository/androidx/lifecycle/lifecycle-common/2.3.0-alpha01:jar",
        "//prebuilts/tools/common/m2/repository/androidx/lifecycle/lifecycle-livedata-core/2.3.0-alpha01:aar",
        "//prebuilts/tools/common/m2/repository/androidx/lifecycle/lifecycle-runtime/2.1.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/lifecycle/lifecycle-runtime/2.3.0-alpha01:aar",
        "//prebuilts/tools/common/m2/repository/androidx/lifecycle/lifecycle-viewmodel-savedstate/2.3.0-alpha01:aar",
        "//prebuilts/tools/common/m2/repository/androidx/lifecycle/lifecycle-viewmodel/2.1.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/lifecycle/lifecycle-viewmodel/2.3.0-alpha01:aar",
        "//prebuilts/tools/common/m2/repository/androidx/navigation/navigation-common/2.0.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/navigation/navigation-fragment/2.0.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/navigation/navigation-runtime/2.0.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/savedstate/savedstate/1.0.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/test/core/1.2.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/test/espresso/espresso-core/3.2.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/test/espresso/espresso-idling-resource/3.2.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/test/ext/junit/1.1.1:aar",
        "//prebuilts/tools/common/m2/repository/androidx/test/monitor/1.2.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/test/rules/1.1.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/test/runner/1.2.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/vectordrawable/vectordrawable-animated/1.1.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/vectordrawable/vectordrawable/1.1.0:aar",
        "//prebuilts/tools/common/m2/repository/androidx/versionedparcelable/versionedparcelable/1.1.0:aar",
        "//prebuilts/tools/common/m2/repository/backport-util-concurrent/backport-util-concurrent/3.1:jar",
        "//prebuilts/tools/common/m2/repository/classworlds/classworlds/1.1-alpha-2:jar",
        "//prebuilts/tools/common/m2/repository/com/almworks/sqlite4java/sqlite4java/0.282:jar",
        "//prebuilts/tools/common/m2/repository/com/android/support/animated-vector-drawable/26.0.2:aar",
        "//prebuilts/tools/common/m2/repository/com/android/support/animated-vector-drawable/27.1.1:aar",
        "//prebuilts/tools/common/m2/repository/com/android/support/appcompat-v7/26.0.2:aar",
        "//prebuilts/tools/common/m2/repository/com/android/support/appcompat-v7/27.1.1:aar",
        "//prebuilts/tools/common/m2/repository/com/android/support/constraint/constraint-layout-solver/1.0.2:jar",
        "//prebuilts/tools/common/m2/repository/com/android/support/constraint/constraint-layout/1.0.2:aar",
        "//prebuilts/tools/common/m2/repository/com/android/support/design/27.1.1:aar",
        "//prebuilts/tools/common/m2/repository/com/android/support/leanback-v17/27.1.1:aar",
        "//prebuilts/tools/common/m2/repository/com/android/support/multidex-instrumentation/1.0.2:aar",
        "//prebuilts/tools/common/m2/repository/com/android/support/multidex/1.0.2:aar",
        "//prebuilts/tools/common/m2/repository/com/android/support/preference-v7/27.1.1:aar",
        "//prebuilts/tools/common/m2/repository/com/android/support/preference-v7/28.0.0:aar",
        "//prebuilts/tools/common/m2/repository/com/android/support/recyclerview-v7/27.1.1:aar",
        "//prebuilts/tools/common/m2/repository/com/android/support/support-annotations/24.0.0:jar",
        "//prebuilts/tools/common/m2/repository/com/android/support/support-annotations/25.4.0:jar",
        "//prebuilts/tools/common/m2/repository/com/android/support/support-annotations/26.0.2:jar",
        "//prebuilts/tools/common/m2/repository/com/android/support/support-annotations/27.1.1:jar",
        "//prebuilts/tools/common/m2/repository/com/android/support/support-compat/26.0.2:aar",
        "//prebuilts/tools/common/m2/repository/com/android/support/support-compat/27.1.1:aar",
        "//prebuilts/tools/common/m2/repository/com/android/support/support-core-ui/26.0.2:aar",
        "//prebuilts/tools/common/m2/repository/com/android/support/support-core-ui/27.1.1:aar",
        "//prebuilts/tools/common/m2/repository/com/android/support/support-core-utils/26.0.2:aar",
        "//prebuilts/tools/common/m2/repository/com/android/support/support-core-utils/27.1.1:aar",
        "//prebuilts/tools/common/m2/repository/com/android/support/support-fragment/26.0.2:aar",
        "//prebuilts/tools/common/m2/repository/com/android/support/support-fragment/27.1.1:aar",
        "//prebuilts/tools/common/m2/repository/com/android/support/support-media-compat/26.0.2:aar",
        "//prebuilts/tools/common/m2/repository/com/android/support/support-media-compat/26.1.0:aar",
        "//prebuilts/tools/common/m2/repository/com/android/support/support-media-compat/27.1.1:aar",
        "//prebuilts/tools/common/m2/repository/com/android/support/support-v13/27.1.1:aar",
        "//prebuilts/tools/common/m2/repository/com/android/support/support-v4/24.0.0:aar",
        "//prebuilts/tools/common/m2/repository/com/android/support/support-v4/26.0.2:aar",
        "//prebuilts/tools/common/m2/repository/com/android/support/support-v4/26.1.0:aar",
        "//prebuilts/tools/common/m2/repository/com/android/support/support-v4/27.1.1:aar",
        "//prebuilts/tools/common/m2/repository/com/android/support/support-vector-drawable/26.0.2:aar",
        "//prebuilts/tools/common/m2/repository/com/android/support/support-vector-drawable/27.1.1:aar",
        "//prebuilts/tools/common/m2/repository/com/android/support/test/espresso/espresso-core/3.0.2:aar",
        "//prebuilts/tools/common/m2/repository/com/android/support/test/espresso/espresso-idling-resource/3.0.2:aar",
        "//prebuilts/tools/common/m2/repository/com/android/support/test/monitor/1.0.2:aar",
        "//prebuilts/tools/common/m2/repository/com/android/support/test/orchestrator/1.0.0:apk",
        "//prebuilts/tools/common/m2/repository/com/android/support/test/rules/1.0.2:aar",
        "//prebuilts/tools/common/m2/repository/com/android/support/test/runner/1.0.2:aar",
        "//prebuilts/tools/common/m2/repository/com/android/support/test/services/test-services/1.0.0:apk",
        "//prebuilts/tools/common/m2/repository/com/android/support/transition/27.1.1:aar",
        "//prebuilts/tools/common/m2/repository/com/android/tools/build/transform-api/1.5.0:jar",
        "//prebuilts/tools/common/m2/repository/com/android/tools/desugar_jdk_libs/1.1.5:jar",
        "//prebuilts/tools/common/m2/repository/com/android/tools/desugar_jdk_libs_configuration/1.1.5:jar",
        "//prebuilts/tools/common/m2/repository/com/artemzin/rxjava/proguard-rules/1.1.0.0:aar",
        "//prebuilts/tools/common/m2/repository/com/braintreepayments/api/braintree/2.3.12:aar",
        "//prebuilts/tools/common/m2/repository/com/braintreepayments/api/core/2.3.12:aar",
        "//prebuilts/tools/common/m2/repository/com/crashlytics/sdk/android/crashlytics/2.6.7:aar",
        "//prebuilts/tools/common/m2/repository/com/fasterxml/jackson/core/jackson-core/2.6.3:jar",
        "//prebuilts/tools/common/m2/repository/com/fasterxml/jackson/core/jackson-databind/2.6.3:jar",
        "//prebuilts/tools/common/m2/repository/com/githang/viewpagerindicator/2.5:aar",
        "//prebuilts/tools/common/m2/repository/com/github/ben-manes/gradle-versions-plugin/0.11.3:jar",
        "//prebuilts/tools/common/m2/repository/com/github/bumptech/glide/glide/3.6.1:jar",
        "//prebuilts/tools/common/m2/repository/com/github/bumptech/glide/okhttp-integration/1.3.1:jar",
        "//prebuilts/tools/common/m2/repository/com/github/dcendents/android-maven-gradle-plugin/1.4.1:jar",
        "//prebuilts/tools/common/m2/repository/com/github/javaparser/javaparser-core/3.5.14:jar",
        "//prebuilts/tools/common/m2/repository/com/google/android/apps/common/testing/accessibility/framework/accessibility-test-framework/2.1:jar",
        "//prebuilts/tools/common/m2/repository/com/google/android/gms/play-services-base/15.0.1:aar",
        "//prebuilts/tools/common/m2/repository/com/google/android/gms/play-services-basement/15.0.1:aar",
        "//prebuilts/tools/common/m2/repository/com/google/android/gms/play-services-tasks/15.0.1:aar",
        "//prebuilts/tools/common/m2/repository/com/google/auto/auto-common/0.3:jar",
        "//prebuilts/tools/common/m2/repository/com/google/auto/service/auto-service/1.0-rc2:jar",
        "//prebuilts/tools/common/m2/repository/com/google/code/findbugs/jsr305/1.3.9:jar",
        "//prebuilts/tools/common/m2/repository/com/google/code/findbugs/jsr305/2.0.1:jar",
        "//prebuilts/tools/common/m2/repository/com/google/code/findbugs/jsr305/3.0.1:jar",
        "//prebuilts/tools/common/m2/repository/com/google/errorprone/error_prone_annotations/2.1.3:jar",
        "//prebuilts/tools/common/m2/repository/com/google/guava/guava/18.0:jar",
        "//prebuilts/tools/common/m2/repository/com/google/guava/guava/19.0:jar",
        "//prebuilts/tools/common/m2/repository/com/google/guava/guava/20.0:jar",
        "//prebuilts/tools/common/m2/repository/com/google/guava/guava/27.0.1-android:jar",
        "//prebuilts/tools/common/m2/repository/com/google/guava/listenablefuture/1.0:jar",
        "//prebuilts/tools/common/m2/repository/com/google/j2objc/j2objc-annotations/1.1:jar",
        "//prebuilts/tools/common/m2/repository/com/google/protobuf/protobuf-java/2.6.1:jar",
        "//prebuilts/tools/common/m2/repository/com/googlecode/jarjar/jarjar/1.3:jar",
        "//prebuilts/tools/common/m2/repository/com/ibm/icu/icu4j/53.1:jar",
        "//prebuilts/tools/common/m2/repository/com/jakewharton/butterknife-gradle-plugin/9.0.0-rc1:jar",
        "//prebuilts/tools/common/m2/repository/com/jakewharton/butterknife-gradle-plugin/9.0.0-rc2:jar",
        "//prebuilts/tools/common/m2/repository/com/jakewharton/butterknife/7.0.1:jar",
        "//prebuilts/tools/common/m2/repository/com/jayway/android/robotium/robotium-solo/5.5.3:jar",
        "//prebuilts/tools/common/m2/repository/com/joanzapata/iconify/android-iconify-fontawesome/2.1.1:aar",
        "//prebuilts/tools/common/m2/repository/com/joanzapata/iconify/android-iconify-material/2.1.1:aar",
        "//prebuilts/tools/common/m2/repository/com/joanzapata/iconify/android-iconify/2.1.1:aar",
        "//prebuilts/tools/common/m2/repository/com/neenbedankt/gradle/plugins/android-apt/1.8:jar",
        "//prebuilts/tools/common/m2/repository/com/nineoldandroids/library/2.4.0:jar",
        "//prebuilts/tools/common/m2/repository/com/paypal/android/sdk/data-collector/2.3.12:jar",
        "//prebuilts/tools/common/m2/repository/com/paypal/android/sdk/paypal-one-touch/2.3.12:aar",
        "//prebuilts/tools/common/m2/repository/com/simperium/android/simperium/0.6.8:aar",
        "//prebuilts/tools/common/m2/repository/com/squareup/dagger/dagger-compiler/1.2.2:jar",
        "//prebuilts/tools/common/m2/repository/com/squareup/dagger/dagger/1.2.2:jar",
        "//prebuilts/tools/common/m2/repository/com/squareup/javawriter/2.1.1:jar",
        "//prebuilts/tools/common/m2/repository/com/squareup/okhttp/okhttp-urlconnection/2.7.4:jar",
        "//prebuilts/tools/common/m2/repository/com/squareup/okhttp/okhttp/2.7.4:jar",
        "//prebuilts/tools/common/m2/repository/com/squareup/okhttp3/okhttp/3.4.1:jar",
        "//prebuilts/tools/common/m2/repository/com/squareup/okio/okio/1.6.0:jar",
        "//prebuilts/tools/common/m2/repository/com/squareup/okio/okio/1.9.0:jar",
        "//prebuilts/tools/common/m2/repository/com/thoughtworks/xstream/xstream/1.4.7:jar",
        "//prebuilts/tools/common/m2/repository/com/thoughtworks/xstream/xstream/1.4.8:jar",
        "//prebuilts/tools/common/m2/repository/com/yalantis/ucrop/2.2.0:aar",
        "//prebuilts/tools/common/m2/repository/com/yqritc/recyclerview-flexibledivider/1.2.6:aar",
        "//prebuilts/tools/common/m2/repository/commons-codec/commons-codec/1.4:jar",
        "//prebuilts/tools/common/m2/repository/commons-lang/commons-lang/2.4:jar",
        "//prebuilts/tools/common/m2/repository/commons-logging/commons-logging/1.1.1:jar",
        "//prebuilts/tools/common/m2/repository/de/greenrobot/eventbus/2.4.0:jar",
        "//prebuilts/tools/common/m2/repository/io/fabric/tools/gradle/1.22.1:jar",
        "//prebuilts/tools/common/m2/repository/io/fabric/tools/gradle/1.28.0:jar",
        "//prebuilts/tools/common/m2/repository/io/reactivex/rxandroid/1.1.0:aar",
        "//prebuilts/tools/common/m2/repository/io/reactivex/rxjava/1.1.0:jar",
        "//prebuilts/tools/common/m2/repository/javax/annotation/javax.annotation-api/1.2:jar",
        "//prebuilts/tools/common/m2/repository/javax/annotation/jsr250-api/1.0:jar",
        "//prebuilts/tools/common/m2/repository/me/tatarka/gradle-retrolambda/3.2.4:jar",
        "//prebuilts/tools/common/m2/repository/me/tatarka/retrolambda/projectlombok/lombok.ast/0.2.3.a2:jar",
        "//prebuilts/tools/common/m2/repository/me/zhanghai/android/materialprogressbar/library/1.1.4:aar",
        "//prebuilts/tools/common/m2/repository/nekohtml/nekohtml/1.9.6.2:jar",
        "//prebuilts/tools/common/m2/repository/nekohtml/xercesMinimal/1.9.6.2:jar",
        "//prebuilts/tools/common/m2/repository/net/bytebuddy/byte-buddy-agent/1.6.5:jar",
        "//prebuilts/tools/common/m2/repository/net/bytebuddy/byte-buddy/1.6.5:jar",
        "//prebuilts/tools/common/m2/repository/net/orfjackal/retrolambda/retrolambda/2.0.6:jar",
        "//prebuilts/tools/common/m2/repository/org/apache/ant/ant-launcher/1.8.0:jar",
        "//prebuilts/tools/common/m2/repository/org/apache/ant/ant/1.8.0:jar",
        "//prebuilts/tools/common/m2/repository/org/apache/commons/commons-lang3/3.4:jar",
        "//prebuilts/tools/common/m2/repository/org/apache/httpcomponents/httpclient/4.1.1:jar",
        "//prebuilts/tools/common/m2/repository/org/apache/httpcomponents/httpcore/4.1:jar",
        "//prebuilts/tools/common/m2/repository/org/apache/maven/maven-ant-tasks/2.1.3:jar",
        "//prebuilts/tools/common/m2/repository/org/apache/maven/maven-artifact-manager/2.2.1:jar",
        "//prebuilts/tools/common/m2/repository/org/apache/maven/maven-artifact/2.2.1:jar",
        "//prebuilts/tools/common/m2/repository/org/apache/maven/maven-error-diagnostics/2.2.1:jar",
        "//prebuilts/tools/common/m2/repository/org/apache/maven/maven-model/2.2.1:jar",
        "//prebuilts/tools/common/m2/repository/org/apache/maven/maven-plugin-registry/2.2.1:jar",
        "//prebuilts/tools/common/m2/repository/org/apache/maven/maven-profile/2.2.1:jar",
        "//prebuilts/tools/common/m2/repository/org/apache/maven/maven-project/2.2.1:jar",
        "//prebuilts/tools/common/m2/repository/org/apache/maven/maven-repository-metadata/2.2.1:jar",
        "//prebuilts/tools/common/m2/repository/org/apache/maven/maven-settings/2.2.1:jar",
        "//prebuilts/tools/common/m2/repository/org/apache/maven/wagon/wagon-file/1.0-beta-6:jar",
        "//prebuilts/tools/common/m2/repository/org/apache/maven/wagon/wagon-http-lightweight/1.0-beta-6:jar",
        "//prebuilts/tools/common/m2/repository/org/apache/maven/wagon/wagon-http-shared/1.0-beta-6:jar",
        "//prebuilts/tools/common/m2/repository/org/apache/maven/wagon/wagon-provider-api/1.0-beta-6:jar",
        "//prebuilts/tools/common/m2/repository/org/assertj/assertj-core/2.6.0:jar",
        "//prebuilts/tools/common/m2/repository/org/bouncycastle/bcprov-jdk15on/1.50:jar",
        "//prebuilts/tools/common/m2/repository/org/bouncycastle/bcprov-jdk15on/1.52:jar",
        "//prebuilts/tools/common/m2/repository/org/bouncycastle/bcprov-jdk16/1.46:jar",
        "//prebuilts/tools/common/m2/repository/org/codehaus/plexus/plexus-container-default/1.0-alpha-9-stable-1:jar",
        "//prebuilts/tools/common/m2/repository/org/codehaus/plexus/plexus-interpolation/1.11:jar",
        "//prebuilts/tools/common/m2/repository/org/codehaus/plexus/plexus-utils/1.5.15:jar",
        "//prebuilts/tools/common/m2/repository/org/hamcrest/hamcrest-integration/1.3:jar",
        "//prebuilts/tools/common/m2/repository/org/hamcrest/hamcrest-library/1.3:jar",
        "//prebuilts/tools/common/m2/repository/org/jacoco/org.jacoco.agent/0.7.4.201502262128:jar",
        "//prebuilts/tools/common/m2/repository/org/jacoco/org.jacoco.agent/0.8.3:jar",
        "//prebuilts/tools/common/m2/repository/org/jacoco/org.jacoco.ant/0.7.4.201502262128:jar",
        "//prebuilts/tools/common/m2/repository/org/jacoco/org.jacoco.ant/0.8.3:jar",
        "//prebuilts/tools/common/m2/repository/org/jacoco/org.jacoco.core/0.7.4.201502262128:jar",
        "//prebuilts/tools/common/m2/repository/org/jacoco/org.jacoco.core/0.8.3:jar",
        "//prebuilts/tools/common/m2/repository/org/jacoco/org.jacoco.report/0.7.4.201502262128:jar",
        "//prebuilts/tools/common/m2/repository/org/jacoco/org.jacoco.report/0.8.3:jar",
        "//prebuilts/tools/common/m2/repository/org/jdeferred/jdeferred-android-aar/1.2.2:aar",
        "//prebuilts/tools/common/m2/repository/org/jdeferred/jdeferred-android-aar/1.2.3:aar",
        "//prebuilts/tools/common/m2/repository/org/jdeferred/jdeferred-core/1.2.2:jar",
        "//prebuilts/tools/common/m2/repository/org/jdeferred/jdeferred-core/1.2.3:jar",
        "//prebuilts/tools/common/m2/repository/org/jetbrains/kotlin/kotlin-compiler-embeddable/1.3.70-dev-withExperimentalGoogleExtensions-20200424:jar",
        "//prebuilts/tools/common/m2/repository/org/jetbrains/kotlinx/kotlinx-collections-immutable-jvm/0.3.3:jar",
        "//prebuilts/tools/common/m2/repository/org/jetbrains/kotlinx/kotlinx-coroutines-android/1.3.6:jar",
        "//prebuilts/tools/common/m2/repository/org/jetbrains/kotlinx/kotlinx-coroutines-core/1.3.6:jar",
        "//prebuilts/tools/common/m2/repository/org/json/json/20141113:jar",
        "//prebuilts/tools/common/m2/repository/org/jsoup/jsoup/1.7.3:jar",
        "//prebuilts/tools/common/m2/repository/org/mockito/mockito-core/1.9.5:jar",
        "//prebuilts/tools/common/m2/repository/org/mockito/mockito-core/2.7.1:jar",
        "//prebuilts/tools/common/m2/repository/org/objenesis/objenesis/1.0:jar",
        "//prebuilts/tools/common/m2/repository/org/objenesis/objenesis/2.5:jar",
        "//prebuilts/tools/common/m2/repository/org/ow2/asm/asm-commons/5.0.1:jar",
        "//prebuilts/tools/common/m2/repository/org/ow2/asm/asm-debug-all/5.0.1:jar",
        "//prebuilts/tools/common/m2/repository/org/ow2/asm/asm-debug-all/5.2:jar",
        "//prebuilts/tools/common/m2/repository/org/ow2/asm/asm-tree/5.0.1:jar",
        "//prebuilts/tools/common/m2/repository/org/ow2/asm/asm/5.0.1:jar",
        "//prebuilts/tools/common/m2/repository/org/reflections/reflections/0.9.10:jar",
        "//prebuilts/tools/common/m2/repository/org/robolectric/android-all/7.0.0_r1-robolectric-r1:jar",
        "//prebuilts/tools/common/m2/repository/org/robolectric/annotations/4.2.1:jar",
        "//prebuilts/tools/common/m2/repository/org/robolectric/junit/4.2.1:jar",
        "//prebuilts/tools/common/m2/repository/org/robolectric/pluginapi/4.2.1:jar",
        "//prebuilts/tools/common/m2/repository/org/robolectric/plugins-maven-dependency-resolver/4.2.1:jar",
        "//prebuilts/tools/common/m2/repository/org/robolectric/resources/4.2.1:jar",
        "//prebuilts/tools/common/m2/repository/org/robolectric/robolectric/4.2.1:jar",
        "//prebuilts/tools/common/m2/repository/org/robolectric/sandbox/4.2.1:jar",
        "//prebuilts/tools/common/m2/repository/org/robolectric/shadowapi/4.2.1:jar",
        "//prebuilts/tools/common/m2/repository/org/robolectric/shadows-framework/4.2.1:jar",
        "//prebuilts/tools/common/m2/repository/org/robolectric/utils-reflector/4.2.1:jar",
        "//prebuilts/tools/common/m2/repository/org/robolectric/utils/4.2.1:jar",
        "//prebuilts/tools/common/m2/repository/org/shredzone/flattr4j/flattr4j-core/2.12:jar",
        "//prebuilts/tools/common/m2/repository/org/slf4j/slf4j-api/1.7.2:jar",
        "//prebuilts/tools/common/m2/repository/org/threeten/threetenbp/1.3.3:jar",
        "//prebuilts/tools/common/m2/repository/xmlpull/xmlpull/1.1.3.1:jar",
        "//prebuilts/tools/common/m2/repository/xpp3/xpp3_min/1.1.4c:jar",
        "//tools/base/third_party:junit_junit",
    ],
    use_zip = False,
)
